Gallery Title Alignment Fix

--- a/wsgi/odyssy/basic/static/basic/css/style.css
+++ b/wsgi/odyssy/basic/static/basic/css/style.css
@@ -539,7 +539,7 @@ hr{
 }
 
 .gallery-thumbnail{
-	width: 29%;
+	width: 10%;
 	float: left;
 	margin: 2%;
 	text-align: center;
